--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,16 +1,15 @@
 cmake_minimum_required(VERSION 3.12.4)
 
-set(prjtest library-test)
+set(prjtest high-side-switch-test)
 
 # Test Sources 
 set(Sources
-    test_library.cpp
-    test_library-ino.cpp
+    test_high-side-switch.cpp
 )
 
 # GCOV Coverage Targets 
 set(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE ON)
-set(GCOV_FILES_DIR ${CMAKE_BINARY_DIR}/CMakeFiles/arduino-lib-template.dir/src)
+set(GCOV_FILES_DIR ${CMAKE_BINARY_DIR}/CMakeFiles/high-side-switch.dir/src)
 
 # Binary and Output Coverage Files
 file(GLOB_RECURSE GCOV_GNNO_GCDA_FILES ${CMAKE_BINARY_DIR}/*.gc??)
@@ -26,7 +25,7 @@ add_custom_target(gcov
 add_custom_command(TARGET gcov
     COMMAND ${CMAKE_COMMAND} -E echo "=================== GCOV ===================="
     COMMAND gcov -b -a ${CMAKE_SOURCE_DIR}/src/*.cpp -o ${GCOV_FILES_DIR}
-    COMMAND gcov -b -a ${CMAKE_SOURCE_DIR}/src/library/*.c -o ${GCOV_FILES_DIR}/library
+    COMMAND gcov -b -a ${CMAKE_SOURCE_DIR}/src/corelib/*.c -o ${GCOV_FILES_DIR}/corelib
     COMMAND ${CMAKE_COMMAND} -E echo "-- Coverage files have been output to ${CMAKE_BINARY_DIR}/coverage"
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/coverage
     )
@@ -46,7 +45,7 @@ add_executable(${prjtest} ${Sources}) #${Headers})
 target_link_libraries(${prjtest} PUBLIC
     gtest_main
     gmock_main
-    arduino-lib-template
+    high-side-switch
 )
 
 # Add Ctest
