First try to run the Lib

--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=arduino-lib-template
+name=High-Side-Switch
 version=1.2.1
 author=Infineon Technologies
 maintainer=Infineon Technologies <www.infineon.com>
@@ -7,4 +7,4 @@ paragraph=Arduino library template for IFX Makers NPI support including Arduino 
 category=Other
 url= https://www.infineon.com/cms/en/tools/landing/infineon-for-makers/
 architectures=*
-includes=library-ino.h
+includes=hss-arduino.h
