--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=High-Side-Switch
-version=1.2.1
+version=1.0.0
 author=Infineon Technologies
 maintainer=Infineon Technologies <www.infineon.com>
-sentence=Arduino library template for IFX Makers NPI support.
-paragraph=Arduino library template for IFX Makers NPI support including Arduino Lib Specification Format 1.5 and additional IFX NPI requirements.
-category=Other
-url= https://www.infineon.com/cms/en/tools/landing/infineon-for-makers/
+sentence=C++ library for the PROFET+2 12V
+paragraph=C++ library for the PROFET+2 12V supporting the Arduino form factor
+category=Evaluation Board
+url= https://github.com/Infineon/high-side-switch/tree/feature/corelib
 architectures=*
-includes=hss-arduino.h
+includes=hss-board-arduino.hpp
