--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,35 @@
-cmake_minimum_required(VERSION 3.12.4)  
+# cmake_minimum_required(VERSION 3.12.4)  
 
-# Arduino Library Template 
-set(lib high-side-switch)
+# # Arduino Library Template 
+# set(lib high-side-switch)
 
-project(${lib} CXX C)
+# project(${lib} CXX C)
 
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-set(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE ON)
-set(CMAKE_C_OUTPUT_EXTENSION_REPLACE ON)
+# set(CMAKE_CXX_STANDARD 11)
+# set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+# set(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE ON)
+# set(CMAKE_C_OUTPUT_EXTENSION_REPLACE ON)
 
-# Coverage Flags
-set(CMAKE_CXX_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
-set(CMAKE_C_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
+# # Coverage Flags
+# set(CMAKE_CXX_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
+# set(CMAKE_C_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
 
-# Header & Source Files
-set(Headers
-    src/corelib/hss.hpp
-    )
+# # Header & Source Files
+# set(Headers
+#     src/corelib/hss.hpp
+#     )
 
-set(Sources
-    src/corelib/hss.cpp
-    )
+# set(Sources
+#     src/corelib/hss.cpp
+#     )
 
-# Add Library
-add_library(${lib} ${Sources} ${Headers})
+# # Add Library
+# add_library(${lib} ${Sources} ${Headers})
 
-# Enable Testing with CTest
-enable_testing()
+# # Enable Testing with CTest
+# enable_testing()
 
-# Add GoogleTest 
-add_subdirectory(googletest)
-# Add Tests Folder
-add_subdirectory(test)
+# # Add GoogleTest 
+# add_subdirectory(googletest)
+# # Add Tests Folder
+# add_subdirectory(test)
