--- a/.travis.yml
+++ b/.travis.yml
@@ -8,87 +8,57 @@ branches:
     - master
     - /^v.*$/
 
-env: 
-  - PLATFORMIO_CI_SRC=examples/high-side-switch
-
-install: 
-  - pip install -U platformio==4.1.0
-  - platformio platform install -f infineonxmc@1.1.3 
-  - platformio platform install -f atmelavr@2.0.0
-
-script: 
-  - platformio ci --lib="." --board=xmc1100_boot_kit --board=xmc4700_relax_kit --board=uno
+addons:
+    apt:
+        packages:
+        # - cmake
+        - doxygen
+        - graphviz
+        sources:
+            - ubuntu-toolchain-r-test
+env:
+    matrix:
+        - PLATFORMIO_CI_SRC=examples/exampleA
 
 jobs:
-  include:   
-    - stage: "Deploy" 
-      name: "GitHub Pages Deployment"
-      if: tag IS present
-      addons:
-        apt:
-            packages:
-            - doxygen
-            - graphviz
-            sources:
-                - ubuntu-toolchain-r-test
+  include:
+    # BINARY BUILD
+    - stage: Compile 
+      name: "Compilation"
+      install: 
+        - pip install -U platformio==4.1.0
+        - platformio platform install -f infineonxmc@1.1.3 
+        - platformio platform install -f atmelavr@2.0.0
+      script: 
+        - platformio ci --lib="." --board=xmc1100_boot_kit --board=uno
+    # TESTING
+    - stage: Test
+      name: "Testing"
       install:
-        - git clone https://github.com/Infineon/InfineonDoxyGenerator.git --branch v.0.2.1
+        # Install cpp-coveralls
+        - pip install cpp-coveralls==0.4.2
+        # Clone Google Test
+        - git clone https://github.com/google/googletest.git --branch v1.10.x
+      script: 
+        # Cmake Build and Run Test
+        - mkdir build && cd build
+        - cmake ..
+        # - cmake --build . 
+        # - ctest
+      after_success: 
+        # Gather the coverage files into root/coverage folder
+        - GCOV_FILES=$(sudo find . | grep '.*\.gc..$')
+        - mkdir ../coverage
+        - cp $GCOV_FILES ../coverage
+        # Call cpp coveralls and upload report
+        - coveralls --root .. -e test -e googletest -e docs -e build
+    # DEPLOY DOCS     
+    - stage: "Deploy" 
+      if: tag IS present
+      name: "GitHub Pages Deployment"
+      install:
+        - git clone https://github.com/Infineon/InfineonDoxyGenerator.git --branch v.0.2.0
       script: 
         - cd InfineonDoxyGenerator
         - python doxyifx.py html
         - python doxyifx.py release $GH_USER $GH_PASS_TOKEN
-
-# addons:
-#     apt:
-#         packages:
-#         - cmake
-#         - doxygen
-#         - graphviz
-#         sources:
-#             - ubuntu-toolchain-r-test
-# env:
-#     matrix:
-#         - PLATFORMIO_CI_SRC=examples/exampleA
-
-# jobs:
-#   include:
-#     # BINARY BUILD
-#     - stage: Compile 
-#       name: "Compilation"
-#       install: 
-#         - pip install -U platformio==4.1.0
-#         - platformio platform install -f infineonxmc@1.1.3 
-#         - platformio platform install -f atmelavr@2.0.0
-#       script: 
-#         - platformio ci --lib="." --board=xmc1100_xmc2go --board=xmc1100_boot_kit --board=xmc4700_relax_kit --board=uno
-#     # TESTING
-#     - stage: Test
-#       name: "Testing"
-#       install:
-#         # Install cpp-coveralls
-#         - pip install cpp-coveralls==0.4.2
-#         # Clone Google Test
-#         - git clone https://github.com/google/googletest.git --branch v1.10.x
-#       script: 
-#         # Cmake Build and Run Test
-#         - mkdir build && cd build
-#         - cmake ..
-#         - cmake --build . 
-#         - ctest
-#       after_success: 
-#         # Gather the coverage files into root/coverage folder
-#         - GCOV_FILES=$(sudo find . | grep '.*\.gc..$')
-#         - mkdir ../coverage
-#         - cp $GCOV_FILES ../coverage
-#         # Call cpp coveralls and upload report
-#         - coveralls --root .. -e test -e googletest -e docs -e build
-#     # DEPLOY DOCS     
-#     - stage: "Deploy" 
-#       if: tag IS present
-#       name: "GitHub Pages Deployment"
-#       install:
-#         - git clone https://github.com/Infineon/InfineonDoxyGenerator.git --branch v.0.2.0
-#       script: 
-#         - cd InfineonDoxyGenerator
-#         - python doxyifx.py html
-#         - python doxyifx.py release $GH_USER $GH_PASS_TOKEN
