--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
     - 3.8.0
 
-install: pip install --user -r requirements.txt
+install: pip install -r requirements.txt
 
 sudo: required
         
