Changed lib properties

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=High-Side-Switch
-version=1.0.0
+version=1.0.0-alpha
 author=Infineon Technologies
 maintainer=Infineon Technologies <www.infineon.com>
 sentence=C++ library for the PROFET+2 12V
 paragraph=C++ library for the PROFET+2 12V supporting the Arduino form factor
 category=Evaluation Board
-url= https://github.com/Infineon/high-side-switch/tree/feature/corelib
+url=https://github.com/Infineon/high-side-switch
 architectures=*
 includes=hss-board-arduino.hpp
