--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ sudo: required
 branches:
     - master
     - /^v.*$/
-    - test
+    - develop
 
 env: 
   - PLATFORMIO_CI_SRC=examples/high-side-switch
