--- a/.travis.yml
+++ b/.travis.yml
@@ -21,24 +21,24 @@ install:
 script: 
   - platformio ci --lib="." --board=xmc1100_boot_kit --board=xmc4700_relax_kit --board=uno
 
-# jobs:
-#   include:   
-#     - stage: "Deploy" 
-#       name: "GitHub Pages Deployment"
-#       if: tag IS present
-#       addons:
-#         apt:
-#             packages:
-#             - doxygen
-#             - graphviz
-#             sources:
-#                 - ubuntu-toolchain-r-test
-#       install:
-#         - git clone https://github.com/Infineon/InfineonDoxyGenerator.git --branch v.0.2.1
-#       script: 
-#         - cd InfineonDoxyGenerator
-#         - python doxyifx.py html
-#         - python doxyifx.py release $GH_USER $GH_PASS_TOKEN
+jobs:
+  include:   
+    - stage: "Deploy" 
+      name: "GitHub Pages Deployment"
+      if: tag IS present
+      addons:
+        apt:
+            packages:
+            - doxygen
+            - graphviz
+            sources:
+                - ubuntu-toolchain-r-test
+      install:
+        - git clone https://github.com/Infineon/InfineonDoxyGenerator.git --branch v.0.2.1
+      script: 
+        - cd InfineonDoxyGenerator
+        - python doxyifx.py html
+        - python doxyifx.py release $GH_USER $GH_PASS_TOKEN
 
 # addons:
 #     apt:
