--- a/.travis.yml
+++ b/.travis.yml
@@ -9,36 +9,36 @@ branches:
     - /^v.*$/
     - develop
 
-env: 
-  - PLATFORMIO_CI_SRC=examples/high-side-switch
-  - PLATFORMIO_CI_SRC=examples/high-side-switch
+# env: 
+#   - PLATFORMIO_CI_SRC=examples/high-side-switch
+#   - PLATFORMIO_CI_SRC=examples/high-side-switch
 
-install: 
-  - pip install -U platformio==4.1.0
-  - platformio platform install -f infineonxmc@1.1.3 
-  - platformio platform install -f atmelavr@2.0.0
+# install: 
+#   - pip install -U platformio==4.1.0
+#   - platformio platform install -f infineonxmc@1.1.3 
+#   - platformio platform install -f atmelavr@2.0.0
 
-script: 
-  - platformio ci --lib="." --board=xmc1100_boot_kit --board=xmc4700_relax_kit --board=uno
+# script: 
+#   - platformio ci --lib="." --board=xmc1100_boot_kit --board=xmc4700_relax_kit --board=uno
 
-jobs:
-  include:   
-    - stage: "Deploy" 
-      name: "GitHub Pages Deployment"
-      if: tag IS present
-      addons:
-        apt:
-            packages:
-            - doxygen
-            - graphviz
-            sources:
-                - ubuntu-toolchain-r-test
-      install:
-        - git clone https://github.com/Infineon/InfineonDoxyGenerator.git --branch v.0.2.1
-      script: 
-        - cd InfineonDoxyGenerator
-        - python doxyifx.py html
-        - python doxyifx.py release $GH_USER $GH_PASS_TOKEN
+# jobs:
+#   include:   
+#     - stage: "Deploy" 
+#       name: "GitHub Pages Deployment"
+#       if: tag IS present
+#       addons:
+#         apt:
+#             packages:
+#             - doxygen
+#             - graphviz
+#             sources:
+#                 - ubuntu-toolchain-r-test
+#       install:
+#         - git clone https://github.com/Infineon/InfineonDoxyGenerator.git --branch v.0.2.1
+#       script: 
+#         - cd InfineonDoxyGenerator
+#         - python doxyifx.py html
+#         - python doxyifx.py release $GH_USER $GH_PASS_TOKEN
 
 addons:
     apt:
@@ -87,7 +87,7 @@ jobs:
         # - coveralls --root .. -e test -e googletest -e docs -e build
     # DEPLOY DOCS     
     - stage: "Deploy" 
-      if: tag IS present
+      # if: tag IS present
       name: "GitHub Pages Deployment"
       install:
         - git clone https://github.com/Infineon/InfineonDoxyGenerator.git --branch v.0.2.0
