Added mocks and fixed the CMakeLists to properly compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.12.4)  
+cmake_minimum_required(VERSION 3.12.4)
 
-# Arduino Library Template 
+# Arduino Library Template
 set(lib high-side-switch)
 
 project(${lib} CXX C)
@@ -14,12 +14,22 @@ set(CMAKE_C_OUTPUT_EXTENSION_REPLACE ON)
 set(CMAKE_CXX_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
 set(CMAKE_C_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
 
+include_directories(
+    src/config
+    src/corelib
+    src/pal
+)
 # Header & Source Files
 set(Headers
-    src/corelib/hss.hpp
+    src/config
+    src/corelib
+    src/pal
     )
 
 set(Sources
+    src/config/variants.cpp
+    src/corelib/filter.cpp
+    src/corelib/hss-board.cpp
     src/corelib/hss.cpp
     )
 
@@ -29,7 +39,7 @@ add_library(${lib} ${Sources} ${Headers})
 # Enable Testing with CTest
 enable_testing()
 
-# Add GoogleTest 
+# Add GoogleTest
 add_subdirectory(googletest)
 # Add Tests Folder
-add_subdirectory(test)
+add_subdirectory(test/unit)
