--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -1,15 +1,17 @@
 cmake_minimum_required(VERSION 3.12.4)
 
-set(prjtest high-side-switch-test)
+set(prjtest hss-test)
 
-# Test Sources 
+# file(GLOB TestSrc CONFIGURE_DEPENDS "*.cpp")
+
+# Test Sources
 set(Sources
-    test_high-side-switch.cpp
+    test_library.cpp
 )
 
-# GCOV Coverage Targets 
+# GCOV Coverage Targets
 set(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE ON)
-set(GCOV_FILES_DIR ${CMAKE_BINARY_DIR}/CMakeFiles/high-side-switch.dir/src)
+set(GCOV_FILES_DIR ${CMAKE_BINARY_DIR}/CMakeFiles/${corelib}.dir/src)
 
 # Binary and Output Coverage Files
 file(GLOB_RECURSE GCOV_GNNO_GCDA_FILES ${CMAKE_BINARY_DIR}/*.gc??)
@@ -23,18 +25,17 @@ add_custom_target(gcov
 
 # Coverage Command
 add_custom_command(TARGET gcov
-    COMMAND ${CMAKE_COMMAND} -E echo "=================== GCOV ===================="
-    COMMAND gcov -b -a ${CMAKE_SOURCE_DIR}/src/*.cpp -o ${GCOV_FILES_DIR}
-    COMMAND gcov -b -a ${CMAKE_SOURCE_DIR}/src/corelib/*.c -o ${GCOV_FILES_DIR}/corelib
-    COMMAND ${CMAKE_COMMAND} -E echo "-- Coverage files have been output to ${CMAKE_BINARY_DIR}/coverage"
-    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/coverage
-    )
+COMMAND ${CMAKE_COMMAND} -E echo "=================== GCOVR ===================="
+COMMAND gcovr -r ${CMAKE_SOURCE_DIR}/src/corelib/ ${GCOV_FILES_DIR}/corelib -b -k --gcov-ignore-parse-errors --html --html-details -o ${CMAKE_BINARY_DIR}/coverage/coverage.html
+COMMAND ${CMAKE_COMMAND} -E echo "-- Coverage files have been output to ${CMAKE_BINARY_DIR}/coverage"
+WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/coverage
+)
 
 # Coverage Clean
 add_custom_target(gcov_clean
-    COMMAND ${CMAKE_COMMAND} -E remove -f ${GCOV_GNNO_GCDA_FILES}
-    COMMAND ${CMAKE_COMMAND} -E remove_directory coverage
-    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+COMMAND ${CMAKE_COMMAND} -E remove -f ${GCOV_GNNO_GCDA_FILES}
+COMMAND ${CMAKE_COMMAND} -E remove_directory coverage
+WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
 )
 
 add_dependencies(gcov ${prjtest})
