--- a/devops/xfpbuild/Jenkinsfile
+++ b/devops/xfpbuild/Jenkinsfile
@@ -156,6 +156,7 @@ pipeline {
 					steps {
 						echo "unit test"
 						//sh ("export DOXY_BIN_PATH=/usr/local/bin/;cd ${env.WORKSPACE}/docs;/usr/bin/make html")
+						cmake --version
 					}
 				}
 
