--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -6,7 +6,8 @@ set(prjtest hss-test)
 
 # Test Sources
 set(Sources
-    test_library.cpp
+    test_hss-bts700xShield.cpp
+    # test_hss.cpp
 )
 
 # GCOV Coverage Targets
