--- a/devops/xfpbuild/Jenkinsfile
+++ b/devops/xfpbuild/Jenkinsfile
@@ -59,7 +59,10 @@ pipeline {
 	 */
 	environment {
 		WEB_ROOT         = "/home/razweb/htdocs-${params.SERVER}"
-		REPO_NAME        = "${JOB_NAME.replaceFirst(/^.*build\/job\/[XFP\s]?(.*)\/.*$/, '$1')}"
+		REPO_NAME        = "${JOB_NAME.replaceFirst(/^.*build\/job\/(.*)\/.*$/, '$1')}"
+		//REPO_NAME        = "${JOB_NAME.replaceFirst(/^.*\/XFP (.*)\/.*$/, '$1')}"
+		//https://xfp-jenkins.icp.infineon.com/job/XFP%20DevOPs%20build/job/high-side-switch/job/DESMAKERS-2022/
+
 		DOCS_TARGET      = "${env.WEB_ROOT}/itec/xfp/${env.REPO_NAME}/${env.BRANCH_NAME}"
 		DOCS_SOURCE      = "${env.WORKSPACE}/docs/doxygen/build"
 		ROOT_URL         = "https://${params.SERVER}.vih.infineon.com"
