Fix sources error in sonar-project.properties

--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -16,7 +16,7 @@ sonar.language=c++,c,python
 #sonar.nodejs.executable=/opt/razware/share/node-v12.13.1-linux-x64/bin/node
 
 # directories to scan
-sonar.sources=src,examples,test
+sonar.sources=src,test
 
 # paths to the reports
 sonar.cxx.cppcheck.reportPath=build/cppcheck-report.xml
