--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -11,6 +11,8 @@ sonar.verbose=true
 
 sonar.sourceEncoding=UTF-8
 sonar.language=c++,c,python
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=.cc,.cpp,.cxx,.c++,.hh,.hpp,.hxx,.h++,.ipp,.c,.h
 
 # for RH7 an higher
 #sonar.nodejs.executable=/opt/razware/share/node-v12.13.1-linux-x64/bin/node
