Fix sources error in sonar-project.properties

--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -11,6 +11,7 @@ sonar.verbose=true
 
 sonar.sourceEncoding=UTF-8
 sonar.language=c++,c,python
+sonar.lang.patterns.cs=
 sonar.c.file.suffixes=-
 sonar.cpp.file.suffixes=.cc,.cpp,.cxx,.c++,.hh,.hpp,.hxx,.h++,.ipp,.c,.h
 
