--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.verbose=true
 
 sonar.sourceEncoding=UTF-8
 sonar.language=c++,c,python
-sonar.lang.patterns.cs=
+sonar.lang.patterns.c=""
 sonar.c.file.suffixes=-
 sonar.cpp.file.suffixes=.cc,.cpp,.cxx,.c++,.hh,.hpp,.hxx,.h++,.ipp,.c,.h
 
