Fix sources error in sonar-project.properties

--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -10,8 +10,9 @@ sonar.projectVersion=0.1.3
 sonar.verbose=true
 
 sonar.sourceEncoding=UTF-8
-sonar.language=c++,c,python
+sonar.language=c++,python
 sonar.lang.patterns.c=""
+sonar.lang.patterns.cs=""
 sonar.c.file.suffixes=-
 sonar.cpp.file.suffixes=.cc,.cpp,.cxx,.c++,.hh,.hpp,.hxx,.h++,.ipp,.c,.h
 
