Finished the googleTest for BTS700x

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -6,8 +6,8 @@ set(prjtest hss-test)
 
 # Test Sources
 set(Sources
-    # test_hss-bts700xShield.cpp
-    test_hss-shield-profet24v.cpp
+    test_hss-bts700xShield.cpp
+    # test_hss-shield-profet24v.cpp
     # test_hss.cpp
 )
 
