Minor changes. Updated includes

--- a/src/framework/arduino/library.properties
+++ b/src/framework/arduino/library.properties
@@ -1,4 +1,4 @@
-name=High-Side-Switch
+name=high-side-switch
 version=0.1.3
 author=Infineon Technologies
 maintainer=Infineon Technologies <www.infineon.com>
