--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@ CTestTestfile.cmake
 InfineonDoxyGenerator/
 docs/doxygen/doxyfile_auto
 /docs/_build
+/docs/library-api-docs
+docs/doxyoutput
 .pio/
 /workflow/
