--- a/src/framework/arduino/library.properties
+++ b/src/framework/arduino/library.properties
@@ -1,10 +1,10 @@
-name=high-side-switch
-version=0.1.3
+name=high-side-switch-ino
+version=1.0.0
 author=Infineon Technologies
 maintainer=Infineon Technologies <www.infineon.com>
-sentence=C++ library for the PROFET+2 12V
-paragraph=C++ library for the PROFET+2 12V supporting the Arduino form factor
-category=Evaluation Board
-url=https://github.com/Infineon/high-side-switch
+sentence=C++ library for the Infineon PROFET high-side switch product family
+paragraph=This library supports the Arduino Uno form factor <a href="https://www.infineon.com/cms/en/product/power/smart-low-side-high-side-switches/high-side-switches/#!boards">PROFET shields</a>
+category=Device control
+url=https://github.com/Infineon/arduino-high-side-switch
 architectures=*
-includes=hss-board-arduino.hpp
+includes=hss-shield-bts5001x-ino.hpp, hss-shield-btt60xx-ino.hpp, hss-shield-bts700x-ino.hpp
