Updated metafiles for deprecation of Arduino library

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=High-Side-Switch
-version=0.1.3
+version=0.1.4
 author=Infineon Technologies
 maintainer=Infineon Technologies <www.infineon.com>
-sentence=C++ library for the PROFET+2 12V
-paragraph=C++ library for the PROFET+2 12V supporting the Arduino form factor
+sentence=DEPRECATED. C++ library for the PROFET+2 12V
+paragraph=Please note: this library is deprecated. Please migrate to the new <a href="https://github.com/Infineon/arduino-high-side-switch">high-side-switch-ino v1.0.0</a> library. It starts in v1.x as it is a continuation of this library. This deprecated library only supports the PROFET+2 12V Arduino form factor
 category=Evaluation Board
 url=https://github.com/Infineon/high-side-switch
 architectures=*
