--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -10,20 +10,20 @@ sonar.projectVersion=1.0.0
 sonar.verbose=true
 
 sonar.sourceEncoding=UTF-8
-sonar.language=c++,python
-sonar.lang.patterns.c=""
-sonar.lang.patterns.cs=""
-sonar.c.file.suffixes=-
+sonar.language=c,c++,python
+
 sonar.cpp.file.suffixes=.cc,.cpp,.cxx,.c++,.hh,.hpp,.hxx,.h++,.ipp,.c,.h
 
 # for RH7 an higher
-#sonar.nodejs.executable=/opt/razware/share/node-v12.13.1-linux-x64/bin/node
+sonar.nodejs.executable=/opt/razware/share/node-v12.13.1-linux-x64/bin/node
 
 # directories to scan
-sonar.sources=src,test
+sonar.sources=src
+sonar.tests=test/unit
 
 # paths to the reports
-sonar.cxx.cppcheck.reportPath=build/cppcheck-report.xml
+sonar.cfamily.gcov.reportsPath=.
+sonar.coverageReportPaths=build/coverage/coverage.xml
 
 # workarrounds for sonar test instance
 sonar.buildbreaker.skip=true
