Pull request #42: DESMAKERS-2343
Removed the Jenkinsfile from the repository and replaced it by the pom.xml to be able to trigger jenkins-pipeline with the jenkins-plugin

Squashed commit of the following:

commit 69bc562bab9dd31e5e50f459af6fab474fe475ac
Author: Dominik Jaumann <Dominik.Jaumann@infineon.com>
Date:   Mon Feb 7 16:25:25 2022 +0100

    Fixed CMakeLists

commit 679b91da0b0f08dbf5e804f882ff0c86b772c187
Author: Dominik Jaumann <Dominik.Jaumann@infineon.com>
Date:   Mon Feb 7 16:11:16 2022 +0100

    Added the xml to be able to trigger the Jenkins pipeline

commit 1895aa8d6dd0cb7f7a15bfef959cbb8422d4c38c
Author: Filies Olaf (IFAG DES TCP PSA) <olaf.filies@infineon.com>
Date:   Mon Jan 31 18:32:23 2022 +0100

    Can we fix the workspace

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12.4)
 
-set(prjtest hss-test)
+set(prjtest unit-test)
 
 file(GLOB Sources CONFIGURE_DEPENDS "*.cpp")
 
