Pull request #43: Feature/Add the BTS50005
Merge in XFPL/high-side-switch from feature/Add_the_BTS50005 to develop

Squashed commit of the following:

commit 00b8c434af3d1531bdd5eb0e5ceae790d381efc3
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Wed Sep 28 15:52:07 2022 +0200

    Fixed typos mentioned in PR

commit e62333a54c13a69d596c7f1bb4f047518af1adcb
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Wed Sep 28 15:39:26 2022 +0200

    Edited the Sonarqube file

commit 6d53ec3f280019c03a23ee1bff0f430a629bb662
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Wed Sep 28 14:24:50 2022 +0200

    Fixed wrong path

commit cab7a1291f69b33ba53992f05777efb12c3712c0
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Wed Sep 28 14:20:47 2022 +0200

    Fixed the CMake-File

commit 9b48d47c5913d42f6f0d5025360f498681d06115
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Wed Sep 28 12:41:34 2022 +0200

    Added CMake options and changed the CMake-Files

commit ee96ef9381e646c5eb367481f9c4c8714f30ad04
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Wed Sep 28 11:25:54 2022 +0200

    Added complete test function set and fixed a few minor errors (typos, etc.

commit 09fbf3e98a66e695e1f7d34c1d3d4a409191f4ff
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Thu Sep 15 17:20:23 2022 +0200

    Added basic structure and most of the basic functionality of the BTS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.12.4)
 
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+
 # Arduino Library Template
 set(corelib high-side-switch)
 
@@ -13,6 +15,25 @@ set(CMAKE_C_OUTPUT_EXTENSION_REPLACE ON)
 # Coverage Flags
 set(CMAKE_CXX_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
 set(CMAKE_C_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY          ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY          ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY          ${CMAKE_BINARY_DIR}/lib)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG    ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG    ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG    ${CMAKE_BINARY_DIR}/lib)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE  ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE  ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE  ${CMAKE_BINARY_DIR}/lib)
+
+message( STATUS "PROJECT_NAME : ${PROJECT_NAME}" )
+message( STATUS "CMAKE_BUILD_TYPE : ${CMAKE_BUILD_TYPE}" )
+message( STATUS "CMAKE_SYSTEM_NAME : ${CMAKE_SYSTEM_NAME}" )
+message( STATUS "CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}" )
+
+include(CompilerSettings)
 
 include_directories(
     src/corelib
@@ -29,10 +50,24 @@ file(GLOB Sources CONFIGURE_DEPENDS src/corelib/*.cpp)
 # Add Library
 add_library(${corelib} ${Sources} ${Headers})
 
-# Enable Testing with CTest
-enable_testing()
+# Currently only using this target for rasbperry pi host
+# if (CMAKE_HOST_UNIX)
+#     # Add directory
+#     add_subdirectory(src/framework/raspberrypi)
+# endif()
 
-# Add GoogleTest
-add_subdirectory(googletest)
-# Add Tests Folder
-add_subdirectory(test/unit)
+option(SETUP_PROJECT_TESTS "Enable and setup project tests." ON)
+
+if(SETUP_PROJECT_TESTS)
+
+    # Add GoogleTest
+    option(USE_GLOBAL_GOOGLETEST_INSTALLATION "Use available global installation of googletest." ON)
+    include(UseGoogleTestInstallation)
+
+    # Enable Testing with CTest
+    enable_testing()
+
+    # Add Tests Folder
+    add_subdirectory(test/unit)
+
+endif()
