--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -6,19 +6,20 @@
 
 sonar.projectKey=XFP_Build_high-side-switch
 sonar.projectName=XFP_Build_high-side-switch
-sonar.projectVersion=1.0.0
+sonar.projectVersion=1.1.0
 sonar.verbose=true
 
 sonar.sourceEncoding=UTF-8
-sonar.language=c,c++,python
+sonar.language=c++,c,python
 
-sonar.cpp.file.suffixes=.cc,.cpp,.cxx,.c++,.hh,.hpp,.hxx,.h++,.ipp,.c,.h
+sonar.cxx.file.suffixes= .cxx, .cpp, .cc, .c, .hxx, .hpp, .hh, .h
+sonar.lang.patterns.cs=""
 
 # for RH7 an higher
 sonar.nodejs.executable=/opt/razware/share/node-v12.13.1-linux-x64/bin/node
 
 # directories to scan
-sonar.sources=src
+sonar.sources=src/corelib
 sonar.tests=test/unit
 
 # paths to the reports
