Pull request #44: Adding Arduino examples and Arduino framework files
Merge in XFPL/high-side-switch from feature/DESMAKERS-2703-create-the-necessary-arduino-framework-files to develop

Squashed commit of the following:

commit ed9296c79627e41681c35ab7dc643d107e6f85e1
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Fri Oct 14 12:19:47 2022 +0200

    Removed ADC read/write-functions from the mock

commit 7f77bf89eb247c9a9a75dd46bd525aea11ae0b52
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Fri Oct 14 12:14:19 2022 +0200

    Removed the Read/Write-Resolution function of the HSS-Lib, since it was not used inside the library

commit 9c09391526508c19e60e928f21a9d056504e6826
Author: Filies Olaf (IFAG DES TCP PSA) <olaf.filies@infineon.com>
Date:   Tue Oct 11 16:54:02 2022 +0200

    Hardtabs, trailing white spaces and spelling

commit 0d79c455b080187f6bad99b4fe8794db4f0da97d
Merge: c8f2896 7726252
Author: Filies Olaf (IFAG DES TCP PSA) <olaf.filies@infineon.com>
Date:   Tue Oct 11 16:52:31 2022 +0200

    Merge branch 'feature/DESMAKERS-2703-create-the-necessary-arduino-framework-files' of https://bitbucket.vih.infineon.com/scm/xfpl/high-side-switch into feature/DESMAKERS-2703-create-the-necessary-arduino-framework-files

commit 7726252a40400e27b2e178cdc5deda4000613c82
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Tue Oct 11 15:52:32 2022 +0200

    Adding Arduino examples and Arduino framework files

commit c8f28960721ad90450944a2adb68ca1ec43d9ed3
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Tue Oct 11 15:52:32 2022 +0200

    Adding Arudino examples and Arduino framework files

--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -24,7 +24,7 @@ sonar.tests=test/unit
 
 # paths to the reports
 sonar.cfamily.gcov.reportsPath=.
-sonar.coverageReportPaths=build/coverage/coverage.xml
+sonar.coverageReportPaths=build/cppcheck-report.xml  build/coverage/coverage.xml
 
 # workarrounds for sonar test instance
 sonar.buildbreaker.skip=true
