Pull request #46: Feature/DESMAKERS-2704 update the metafiles
Merge in XFPL/high-side-switch from feature/DESMAKERS-2704-update-the-metafiles to develop

Squashed commit of the following:

commit 79c040ee763ebff321c66e0fd02a16e7b6734836
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Fri Oct 14 11:54:45 2022 +0200

    Edited the necessary metafiles for Platformio and Arduino and extended the Arduino-Readme and the Keywords-File for Arduino

commit f9cb315b4799301826da88f980fa8cce42e70dda
Author: djaumann <dominik.jaumann@infineon.com>
Date:   Thu Oct 13 09:59:14 2022 +0200

    Added the BTS500xx to the Readme and fixed the problem with the pictures in the Readme

--- a/src/framework/arduino/library.properties
+++ b/src/framework/arduino/library.properties
@@ -1,5 +1,5 @@
 name=high-side-switch-ino
-version=1.0.0
+version=1.1.0
 author=Infineon Technologies
 maintainer=Infineon Technologies <www.infineon.com>
 sentence=C++ library for the Infineon PROFET high-side switch product family
@@ -7,4 +7,4 @@ paragraph=This library supports the Arduino Uno form factor <a href="https://www
 category=Device control
 url=https://github.com/Infineon/arduino-high-side-switch
 architectures=*
-includes=hss-shield-bts5001x-ino.hpp, hss-shield-btt60xx-ino.hpp, hss-shield-bts700x-ino.hpp
+includes=hss-shield-bts5001x-ino.hpp, hss-shield-bts500xx-ino.hpp, hss-shield-btt60xx-ino.hpp, hss-shield-bts700x-ino.hpp
