--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -10,21 +10,20 @@ sonar.projectVersion=1.1.0
 sonar.verbose=true
 
 sonar.sourceEncoding=UTF-8
-sonar.language=c++,c,python
+sonar.language=c,c++,python
 
-sonar.cxx.file.suffixes= .cxx, .cpp, .cc, .c, .hxx, .hpp, .hh, .h
-sonar.lang.patterns.cs=""
+sonar.cpp.file.suffixes=.cc,.cpp,.cxx,.c++,.hh,.hpp,.hxx,.h++,.ipp,.c,.h
 
 # for RH7 an higher
 sonar.nodejs.executable=/opt/razware/share/node-v12.13.1-linux-x64/bin/node
 
 # directories to scan
-sonar.sources=src/corelib
+sonar.sources=src
 sonar.tests=test/unit
 
 # paths to the reports
 sonar.cfamily.gcov.reportsPath=.
-sonar.coverageReportPaths=build/cppcheck-report.xml  build/coverage/coverage.xml
+sonar.coverageReportPaths=build/cppcheck-report.xml build/coverage/coverage.xml
 
 # workarrounds for sonar test instance
 sonar.buildbreaker.skip=true
