Changes for SonarQube

--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -23,7 +23,8 @@ sonar.tests=test/unit
 
 # paths to the reports
 sonar.cfamily.gcov.reportsPath=.
-sonar.coverageReportPaths=build/cppcheck-report.xml build/coverage/coverage.xml
+sonar.coverageReportPaths=build/coverage/coverage.xml
+sonar.cxx.cobertura.reportPaths=build/cppcheck-report.xml
 
 # workarrounds for sonar test instance
 sonar.buildbreaker.skip=true
