--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -13,6 +13,7 @@ sonar.sourceEncoding=UTF-8
 sonar.language=c,c++,python
 
 sonar.cpp.file.suffixes=.cc,.cpp,.cxx,.c++,.hh,.hpp,.hxx,.h++,.ipp,.c,.h
+sonar.lang.patterns.cs=""
 
 # for RH7 an higher
 sonar.nodejs.executable=/opt/razware/share/node-v12.13.1-linux-x64/bin/node
