Changes for SonarQube

--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.verbose=true
 sonar.sourceEncoding=UTF-8
 sonar.language=c,c++,python
 
-sonar.cpp.file.suffixes=.cc,.cpp,.cxx,.c++,.hh,.hpp,.hxx,.h++,.ipp,.c,.h
+sonar.cxx.file.suffixes= .cxx, .cpp, .cc, .c, .hxx, .hpp, .hh, .h
 sonar.lang.patterns.cs=""
 
 # for RH7 an higher
