Fix SonarQube coverage ettings

--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -24,8 +24,10 @@ sonar.tests=test/unit
 
 # paths to the reports
 sonar.cfamily.gcov.reportsPath=.
-sonar.coverageReportPaths=build/coverage/coverage.xml
+sonar.cxx.includeDirectories=src/framework, src/corelib, src/config, src/pal
+sonar.cxx.cppcheck.reportPath=build/cppcheck-report.xml
 sonar.cxx.cobertura.reportPaths=build/cppcheck-report.xml
+sonar.coverageReportPaths=build/coverage/coverage.xml
 
 # workarrounds for sonar test instance
 sonar.buildbreaker.skip=true
