Fix SonarQube coverage ettings

--- a/devops/xfpbuild/sonar-project.properties
+++ b/devops/xfpbuild/sonar-project.properties
@@ -19,7 +19,7 @@ sonar.lang.patterns.cs=""
 sonar.nodejs.executable=/opt/razware/share/node-v12.13.1-linux-x64/bin/node
 
 # directories to scan
-sonar.sources=src
+sonar.sources=src,test
 sonar.tests=test/unit
 
 # paths to the reports
